; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_pause_reset.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-encoder.c_pause_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pause_data = type { i32, i64, i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pause_reset(%struct.pause_data* %0) #0 {
  %2 = alloca %struct.pause_data*, align 8
  store %struct.pause_data* %0, %struct.pause_data** %2, align 8
  %3 = load %struct.pause_data*, %struct.pause_data** %2, align 8
  %4 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %3, i32 0, i32 0
  %5 = call i32 @pthread_mutex_lock(i32* %4)
  %6 = load %struct.pause_data*, %struct.pause_data** %2, align 8
  %7 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %6, i32 0, i32 4
  store i64 0, i64* %7, align 8
  %8 = load %struct.pause_data*, %struct.pause_data** %2, align 8
  %9 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %8, i32 0, i32 3
  store i64 0, i64* %9, align 8
  %10 = load %struct.pause_data*, %struct.pause_data** %2, align 8
  %11 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %10, i32 0, i32 2
  store i64 0, i64* %11, align 8
  %12 = load %struct.pause_data*, %struct.pause_data** %2, align 8
  %13 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %12, i32 0, i32 1
  store i64 0, i64* %13, align 8
  %14 = load %struct.pause_data*, %struct.pause_data** %2, align 8
  %15 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %14, i32 0, i32 0
  %16 = call i32 @pthread_mutex_unlock(i32* %15)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
